@@ -81,14 +81,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.10.1</version> <!-- Оновлено до останньої версії -->
 				<configuration>
 					<source>${java.version}</source> <!-- Вказуємо версію Java -->
 					<target>${java.version}</target> <!-- Версія JVM для рунтайму -->
-					<compilerArgs>
-						<arg>--add-exports</arg>
-						<arg>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
